# fyNaNs

./: .env.example  .env.production.example  .gitignore  Caddyfile  README.md  ROADMAP.md  alloy-config.alloy  docker-compose.prod.yml  docker-compose.yml  package.json  pnpm-lock.yaml  pyproject.toml
apps/api/: .dockerignore  Dockerfile  pyproject.toml
apps/api/migrations/: env.py
apps/api/migrations/versions/: 2ceca98f0ddb_add_savings_goals.py  351e1dac0bc1_add_plaid_items_accounts_transactions_.py  4d8c29b768f8_add_rotated_at_pending_mfa_secret_.py  6910aeaaf6d9_add_categories_table.py  cd3a428d235e_add_plaid_sandbox_fields.py  (+4 more)
apps/api/src/: main.py
apps/api/tests/: conftest.py  factories.py  test_accounts.py  test_auth.py  test_auth_login.py  test_auth_mfa.py  test_auth_oauth.py  test_auth_password.py  test_auth_registration.py  test_auth_service.py  test_auth_sessions.py  test_auth_tokens.py  test_bill_auto_advance.py  test_bill_reminders_job.py  test_bills.py  test_budget_alerts_job.py  test_budget_overview.py  test_budgets.py  test_categories.py  test_dashboard.py  test_dashboard_goals.py  test_dev_router.py  test_device_tokens.py  test_fallback_sync_job.py  test_health.py  test_metrics.py  test_n1_query_fixes.py  test_notifications.py  test_plaid_router.py  test_plaid_service.py  test_plaid_webhook.py  test_push_service.py  test_rate_limit.py  test_savings_goal_notification_gate.py  test_savings_goals_api.py  test_savings_goals_job.py  test_savings_goals_models.py  test_savings_goals_schemas.py  test_savings_goals_service.py  test_transaction_import.py  (+6 more)
(+323 files in other folders)
